fix button overlap border on small text size

--- a/application/src/main/resources/nl/jixxed/eliteodysseymaterials/style/style.css
+++ b/application/src/main/resources/nl/jixxed/eliteodysseymaterials/style/style.css
@@ -3125,9 +3125,9 @@
 .shipbuilder-slots-slotbox-button{
     -fx-padding: 0em;
     -fx-max-width: 1.5em;
-    -fx-max-height: 1.5em;
+    -fx-max-height: 1.4em;
     -fx-min-width: 1.5em;
-    -fx-min-height: 1.5em;
+    -fx-min-height: 1.4em;
     -fx-background-color: #0f0f0f;
     /*-fx-border-width: 0;*/
 }
